# voker

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/voker-app/: Cargo.toml  README.md
crates/voker-app/derive/: Cargo.toml
crates/voker-app/derive/src/: lib.rs
crates/voker-app/src/: app.rs  exit.rs  label.rs  lib.rs  main_schedule.rs  panic_handler.rs  plugin.rs  schedule.rs  schedule_runner.rs  shutdown.rs  sub_app.rs  task_pool_plugin.rs  terminal_ctrl_c_handler.rs
crates/voker-asset/: Cargo.toml  README.md
crates/voker-asset/derive/: Cargo.toml
crates/voker-asset/derive/src/: lib.rs
crates/voker-asset/src/: asset.rs  assets.rs  changes.rs  direct_access_ext.rs  event.rs  handle.rs  ident.rs  lib.rs  meta.rs  path.rs  plugin.rs  render_asset.rs  saver.rs  transformer.rs  utils.rs
crates/voker-asset/src/io/: android.rs  future.rs  gated.rs  memory.rs  mod.rs  reader.rs  source.rs  wasm.rs  watcher.rs  web.rs  writer.rs
crates/voker-asset/src/loader/: builder.rs  context.rs  error.rs  loaded.rs  loaders.rs  mod.rs
crates/voker-asset/src/meta/: hash.rs  info.rs  mod.rs  version.rs
crates/voker-asset/src/processor/: context.rs  error.rs  info.rs  mod.rs  pipeline.rs
crates/voker-asset/src/server/: builder.rs  config.rs  error.rs  info.rs  internal.rs  mod.rs
crates/voker-diagnostic/: Cargo.toml  README.md
crates/voker-diagnostic/src/: diagnostic.rs  entity_count.rs  frame_count.rs  lib.rs  log_diagnostic.rs  system_info.rs
crates/voker-ecs/: Cargo.toml  README.md
crates/voker-ecs/derive/: Cargo.toml
crates/voker-ecs/derive/src/: bundle.rs  component.rs  entity_event.rs  event.rs  game_error.rs  lib.rs  message.rs  path.rs  query_data.rs  resource.rs  schedule.rs  system_param.rs  utils.rs
crates/voker-ecs/src/: __macro_exports.rs  borrow.rs  clone.rs  error.rs  hierarchy.rs  label.rs  lib.rs  name.rs  spawn.rs  template.rs  tick.rs  traversal.rs
crates/voker-ecs/src/archetype/: arches.rs  ident.rs  info.rs  mod.rs
crates/voker-ecs/src/bundle/: bundle.rs  bundles.rs  ident.rs  impls.rs  info.rs  mod.rs
crates/voker-ecs/src/command/: command.rs  commands.rs  entity.rs  mod.rs  object.rs  output.rs  queue.rs
crates/voker-ecs/src/component/: component.rs  components.rs  hook.rs  ident.rs  impls.rs  info.rs  mod.rs  required.rs  storage.rs  tools.rs
crates/voker-ecs/src/entity/: allocator.rs  error.rs  hash_map.rs  hash_set.rs  ident.rs  index_map.rs  index_set.rs  info.rs  mapper.rs  mod.rs  storage.rs
crates/voker-ecs/src/error/: context.rs  ecs_error.rs  extension.rs  game_error.rs  handler.rs  impls.rs  mod.rs
crates/voker-ecs/src/event/: event.rs  events.rs  ident.rs  lifecycle.rs  mod.rs  trigger.rs
crates/voker-ecs/src/link/: accessor.rs  collection.rs  commands.rs  link.rs  mod.rs
crates/voker-ecs/src/message/: ident.rs  iterators.rs  message.rs  message_mutator.rs  message_registry.rs  message_writer.rs  messages.rs  mod.rs  mutator.rs  queue.rs  reader.rs  registry.rs  writer.rs
crates/voker-ecs/src/observer/: builder.rs  ident.rs  mod.rs  observer.rs  observers.rs  system.rs
crates/voker-ecs/src/query/: error.rs  iter.rs  mod.rs  query.rs  single.rs  state.rs
crates/voker-ecs/src/reflect/: component.rs  from_world.rs  map_entities.rs  mod.rs  resource.rs
crates/voker-ecs/src/relationship/: accessor.rs  collection.rs  methods.rs  mod.rs  query.rs  relationship.rs
crates/voker-ecs/src/resource/: ident.rs  impls.rs  info.rs  mod.rs  resource.rs  resources.rs
crates/voker-ecs/src/schedule/: apply.rs  config.rs  label.rs  mod.rs  node.rs  schedule.rs  schedules.rs  set.rs  set_config.rs  system.rs
crates/voker-ecs/src/storage/: impls.rs  mod.rs  utils.rs
crates/voker-ecs/src/system/: error.rs  function.rs  ident.rs  input.rs  meta.rs  mod.rs  name.rs  registry.rs  set.rs  system.rs
crates/voker-ecs/src/utils/: cloner.rs  debug_location.rs  debug_name.rs  debug_unwrap.rs  dropper.rs  helper.rs  ident_pool.rs  mod.rs  on_panic.rs
crates/voker-ecs/src/world/: deferred.rs  from.rs  ident.rs  mod.rs  unsafe_world.rs  world.rs
crates/voker-internal/: Cargo.toml
crates/voker-internal/src/: lib.rs
crates/voker-log/: Cargo.toml  README.md
crates/voker-log/src/: android.rs  lib.rs  once.rs  plugin.rs
crates/voker-math/: Cargo.toml  README.md
crates/voker-math/src/: affine3.rs  aspect_ratio.rs  common_traits.rs  compass.rs  direction.rs  float_ord.rs  isometry.rs  lib.rs  ops.rs  ray.rs  rotation2d.rs
crates/voker-math/src/bounding/: raycast2d.rs  raycast3d.rs
crates/voker-math/src/cubic_splines/: curve_impls.rs  mod.rs
crates/voker-math/src/curve/: adaptors.rs  cores.rs  easing.rs  interval.rs  iterable.rs  mod.rs  sample_curves.rs
crates/voker-math/src/primitives/: dim2.rs  dim3.rs  half_space.rs  inset.rs  mod.rs  polygon.rs  view_frustum.rs
crates/voker-math/src/rects/: irect.rs  rect.rs  urect.rs
crates/voker-math/src/sampling/: mesh_sampling.rs  shape_sampling.rs  standard.rs
crates/voker-os/: Cargo.toml  README.md
crates/voker-os/src/: atomic.rs  lib.rs
crates/voker-os/src/asyn/: mod.rs
crates/voker-os/src/cell/: mod.rs  sync_cell.rs  sync_unsafe_cell.rs
crates/voker-os/src/sync/: mod.rs  sync_cell.rs  sync_unsafe_cell.rs
crates/voker-os/src/thread/: mod.rs
crates/voker-ptr/: Cargo.toml  README.md
crates/voker-ptr/src/: thin_slice.rs  type_erased.rs
crates/voker-reflect/: Cargo.toml  README.md
crates/voker-reflect/derive/: Cargo.toml
crates/voker-reflect/src/: __macro_exports.rs  lib.rs
crates/voker-state/: Cargo.toml  README.md
crates/voker-state/derive/: Cargo.toml
crates/voker-state/src/: app.rs  command.rs  cond.rs  lib.rs  scoped.rs
crates/voker-task/: Cargo.toml  README.md
crates/voker-task/src/: futures.rs  lib.rs  macro_utils.rs  slice.rs
crates/voker-time/: Cargo.toml  README.md
crates/voker-time/src/: conditions.rs  delayed.rs  fixed.rs  lib.rs  real.rs  stopwatch.rs  time.rs  timer.rs  virt.rs
crates/voker-utils/: Cargo.toml  README.md
crates/voker-utils/src/: cold_path.rs  lib.rs  num.rs  range_invoke.rs  vec.rs
(+342 files in other folders)
