[workspace]
resolver = "3"
members = [ "crates/*" ]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voker-engine/voker"

[package]
name = "voker"
exclude = [".github"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std" ]

dynlib = ["dep:voker-dylib"]

std = ["voker-internal/std"]

async_io = ["voker-internal/async_io"]

backtrace = ["voker-internal/backtrace"]

debug = ["voker-internal/debug"]

reflect_docs = ["voker-internal/reflect_docs"]

[dependencies]
voker-internal = { path = "./crates/voker-internal", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
voker-dylib = { path = "./crates/voker-dylib", default-features = false, optional = true }

[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

print_stdout = "warn"
print_stderr = "warn"

allow_attributes_without_reason = "warn"

type_complexity = "allow"
too_many_arguments = "allow"

type_id_on_box = "deny"
missing_transmute_annotations = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints]
workspace = true
