[workspace]
resolver = "3"
members = [ "crates/*" ]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/voker-engine/voker"

[package]
name = "voker"
exclude = [".github"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "default_app", "default_dev", "default_platform" ]

default_app = [
  "voker-asset",
  "voker-log",
]

default_dev = [
    "debug",
    "trace",
    "backtrace",
    "file_watcher",
    "voker-diagnostic",
]

default_platform = [
  "std",
  "http",
  "https",
  "sysinfo_plugin",
]

default_no_std = [
  "libm",
]

# Enable dynamic linking
dynlib = ["dep:voker-dylib", "voker-internal/dynlib"]

# support std
std = ["voker-internal/std"]

# Output the type name and file location information in the log.
debug = ["voker-internal/debug"]

# Enable spanned `tracing` for better debugging and error information.
trace = ["voker-internal/trace"]

# Track stack information during reflection serialization and error handling.
# Need to enable `std`.
backtrace = ["voker-internal/backtrace"]

# Collect document information of reflection types.
reflect_docs = ["voker-internal/reflect_docs"]

# Enable `sysinfo` diagnostic (e.g. CPU and Memory usage).
# Need to enable `std`.
sysinfo_plugin = ["voker-internal/sysinfo_plugin"]

# Use the `block_on` function of `async_io`.
# Need to enable `std`.
# Note that `future-lite::block_on` is default impl in STD Mode.
async_io = ["voker-internal/async_io"]

# Enable `tracy_client` crate and use custom allocator for memory tracing.
# Need to enable `std`.
trace_tracy_memory = ["voker-internal/trace_tracy_memory"]

# Uses the `libm` maths library instead of the one provided in `std` and `core`.
libm = ["voker-internal/libm"]

# Enable libm mathematical functions as a fallback for no_std environments.
# Can be overridden with std feature.
nostd-libm = ["voker-internal/nostd-libm"]

# Enable assertions to check the validity of parameters passed to glam
glam_assert = ["voker-internal/glam_assert"]

# Enable assertions in debug builds to check the validity of parameters passed to glam
debug_glam_assert = ["voker-internal/debug_glam_assert"]

# Enable HTTP network assets
http = ["voker-internal/http"]

# Enable HTTPS network assets
https = ["voker-internal/https"]

# Enable watcher for asset files and embedded asset.
file_watcher = ["voker-internal/file_watcher"]

# Enable asset processor, only work if `AssetServerMode` is `Processed`.
asset_processor = ["voker-internal/asset_processor"]

voker-asset = ["voker-internal/voker-asset"]

voker-log = ["voker-internal/voker-log"]

voker-diagnostic = ["voker-internal/voker-diagnostic"]

[dependencies]
voker-internal = { path = "./crates/voker-internal", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
voker-dylib = { path = "./crates/voker-dylib", default-features = false, optional = true }

[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

print_stdout = "warn"
print_stderr = "warn"

allow_attributes_without_reason = "warn"

type_complexity = "allow"
too_many_arguments = "allow"

type_id_on_box = "deny"
missing_transmute_annotations = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints]
workspace = true
