[package]
name = "voker-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std" ]

std = [
    "voker-os/std",
    "voker-ecs/std",
    "voker-reflect/std",
]

[dependencies]
voker-cfg = { path = "../voker-cfg" }
voker-utils = { path = "../voker-utils" }

voker-os = { path = "../voker-os", default-features = false }
voker-ecs = { path = "../voker-ecs", default-features = false }
voker-reflect = { path = "../voker-reflect", default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

