[package]
name = "voker-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std" ]

std = [
    "voker-os/std",
    "voker-ecs/std",
    "voker-reflect/std",
    "dep:ctrlc",
]

web = [
    "voker-os/web",
    "voker-task/web",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]

[dependencies]
voker-cfg = { path = "../voker-cfg" }
voker-utils = { path = "../voker-utils" }

voker-os = { path = "../voker-os", default-features = false }
voker-ecs = { path = "../voker-ecs", default-features = false }
voker-task = { path = "../voker-task", default-features = false }
voker-reflect = { path = "../voker-reflect", default-features = false }

cfg-if = "1.0"
log = { version = "0.4", default-features = false }

[target.'cfg(any(all(unix, not(target_os = "horizon")), windows))'.dependencies]
ctrlc = { version = "3.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Window"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true

