[package]
name = "voker-diagnostic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]

std = [
    "voker-app/std",
    "voker-ecs/std",
    "voker-os/std",
]

dynlib = []

sysinfo_plugin = ["std", "dep:sysinfo"]

[dependencies]
voker-utils = { path = "../voker-utils", default-features = false }
voker-app = { path = "../voker-app", default-features = false }
voker-ecs = { path = "../voker-ecs", default-features = false }
voker-os = { path = "../voker-os", default-features = false }

log = { version = "0.4", default-features = false }

[target.'cfg(all(target_os = "macos"))'.dependencies]
sysinfo = { version = "0.38.4", optional = true, default-features = false, features = ["apple-app-store", "system"] }

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "android", target_os = "freebsd", target_os = "netbsd"))'.dependencies]
sysinfo = { version = "0.38.4", optional = true, default-features = false, features = ["system"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
