[package]
name = "voker-ecs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std", "debug", "backtrace" ]

std = [
    "voker-os/std",
    "voker-task/std",
    "voker-reflect/std",
]

debug = [
    "voker-utils/debug"
]

trace = []

backtrace = ["std"]

[dependencies]

voker-ecs-derive = { path = "derive" }

voker-ptr = { path = "../voker-ptr" }
voker-cfg = { path = "../voker-cfg" }
voker-inventory = { path = "../voker-inventory" }

voker-utils = { path = "../voker-utils", default-features = false }
voker-os = { path = "../voker-os", default-features = false }
voker-task = { path = "../voker-task", default-features = false }
voker-reflect = { path = "../voker-reflect", default-features = false }

# -------------------- External  --------------------

thiserror = { version = "2", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
tracing = { version = "0.1", default-features = false, features = ["log"] }
bitflags = { version = "2.10", default-features = false }
fixedbitset = { version = "0.5", default-features = false }
slotmap = { version = "1.1", default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
