[package]
name = "voker-internal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]

default = [ "std", "debug", "backtrace" ]

std = [
    "voker-os/std",
    "voker-task/std",
    "voker-reflect/std",
    "voker-ecs/std",
    "voker-math/std",
]

async_io = [
    "std",
    "voker-task/async_io",
]

backtrace = [
    "std",
    "voker-ecs/backtrace",
    "voker-reflect/backtrace",
]

debug = [
    "voker-ecs/debug",
]

reflect_docs = [
    "voker-reflect/reflect_docs",
]

voker-log = ["dep:voker-log"]
voker-diagnostic = ["dep:voker-diagnostic"]

[dependencies]

voker-cfg = { path = "../voker-cfg", default-features = false }
voker-ptr = { path = "../voker-ptr", default-features = false }
voker-utils = { path = "../voker-utils", default-features = false }
voker-inventory = { path = "../voker-inventory", default-features = false }

voker-os = { path = "../voker-os", default-features = false }
voker-task = { path = "../voker-task", default-features = false }
voker-reflect = { path = "../voker-reflect", default-features = false }
voker-ecs = { path = "../voker-ecs", default-features = false }
voker-math = { path = "../voker-math", default-features = false }

# std required
voker-log = { path = "../voker-log", optional = true }
voker-diagnostic = { path = "../voker-diagnostic", optional = true, default-features = false }

[lints]
workspace = true
