[package]
name = "voker-internal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]

default = [ "std", "debug", "backtrace" ]

std = [
    "voker-os/std",
    "voker-task/std",
    "voker-reflect/std",
    "voker-ecs/std",
    "voker-math/std",
]

# Disable code that is unsupported when Voker is dynamically linked
dynlib = [
    "voker-diagnostic/dynlib"
]

# Output the type name and file location information in the log.
debug = [
    "voker-ecs/debug",
]

# Track stack information during reflection serialization and error handling.
backtrace = [
    "std",
    "voker-ecs/backtrace",
    "voker-reflect/backtrace",
]

# Collect document information of reflection types.
reflect_docs = [
    "voker-reflect/reflect_docs",
]

# Enable `sysinfo` diagnostic (e.g. CPU and Memory usage).
sysinfo_plugin = ["voker-diagnostic/sysinfo_plugin"]

# Use the `block_on` function of `async_io`.
# Note that `future-lite::block_on` is default impl in STD Mode.
async_io = [
    "std",
    "voker-task/async_io",
]

# Enable `tracing` crate for better debugging and error information.
trace = ["voker-log/trace",]

# Enable `tracy_client` crate and use custom allocator for memory tracing.
trace_tracy_memory = ["voker-log/trace_tracy_memory",]

# Uses the `libm` maths library instead of the one provided in `std` and `core`.
libm = ["voker-math/libm"]

# Enable libm mathematical functions as a fallback for no_std environments.
# Can be overridden with std feature.
nostd-libm = ["voker-math/nostd-libm"]

# Enable assertions to check the validity of parameters passed to glam
glam_assert = ["voker-math/glam_assert"]

# Enable assertions in debug builds to check the validity of parameters passed to glam
debug_glam_assert = ["voker-math/debug_glam_assert"]

# Enable HTTP network assets
http = ["voker-asset/http"]

# Enable HTTPS network assets
https = ["voker-asset/https"]

# Enable watcher for asset files and embedded asset.
file_watcher = ["voker-asset/file_watcher"]

voker-asset = ["std", "dep:voker-asset"]

voker-log = ["std", "dep:voker-log"]

voker-diagnostic = ["dep:voker-diagnostic"]

[dependencies]

voker-cfg = { path = "../voker-cfg", default-features = false }
voker-ptr = { path = "../voker-ptr", default-features = false }
voker-utils = { path = "../voker-utils", default-features = false }
voker-inventory = { path = "../voker-inventory", default-features = false }

voker-os = { path = "../voker-os", default-features = false }
voker-task = { path = "../voker-task", default-features = false }
voker-reflect = { path = "../voker-reflect", default-features = false }
voker-ecs = { path = "../voker-ecs", default-features = false }
voker-state = { path = "../voker-state", default-features = false }
voker-math = { path = "../voker-math", default-features = false }

# std required
voker-log = { path = "../voker-log", optional = true, default-features = false }
voker-asset = { path = "../voker-asset", optional = true, default-features = false }

# optional
voker-diagnostic = { path = "../voker-diagnostic", optional = true, default-features = false }

[lints]
workspace = true
