[package]
name = "voker-os"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]

std = [
  "portable-atomic/std",
  "dep:thread_local",
]

[dependencies]
voker-cfg = { path = "../voker-cfg" }

# -------------------- External  --------------------

thread_local = { version = "1.0", optional = true }

[target.'cfg(not(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64")))'.dependencies]
portable-atomic = { version = "1", default-features = false, features = [ "fallback" ] }

# We currently do not support platforms without atomic pointers.

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition", "--generate-macro-expansion"]
all-features = true
