[package]
name = "voker-reflect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std", "auto_register", "debug" ]

# Enable Type Tracing in serialization and deserialization.
# Only effect when `std` feature is enabled.
# 
# The `bebug` of different modules are independent, and it is possible
# to turn off the overall `debug` and only enable specific crate's `debug`.
debug = []

std = [
    "voker-os/std",
    "serde_core/std",
    "erased-serde/std",
]

reflect_docs = [ "voker-reflect-derive/reflect_docs" ]

auto_register = [ "dep:inventory", "voker-reflect-derive/auto_register" ]

[dependencies]
voker-reflect-derive = { path = "derive" }

voker-ptr = { path = "../voker-ptr" }
voker-cfg = { path = "../voker-cfg" }
voker-utils = { path = "../voker-utils" }

voker-os = { path = "../voker-os", default-features = false }

# auto_register
inventory = { version = "0.3", optional = true }

# reflect serde
serde_core = { version = "1", default-features = false, features = ["alloc"] }
erased-serde = { version = "0.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
ron = "0.12"
serde_json = "1"
serde = { version = "1", features = ["derive"] }


[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
