[package]
name = "voker-reflect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std", "backtrace" ]

# Enable Type Tracing in serialization and deserialization.
# Only effect when `std` feature is enabled.
backtrace = ["std"]

std = [
    "voker-os/std",
    "serde_core/std",
    "erased-serde/std",
]

glam = ["dep:glam"]
uuid = ["dep:uuid"]

reflect_docs = [ "voker-reflect-derive/reflect_docs" ]

[dependencies]
voker-reflect-derive = { path = "derive" }

voker-ptr = { path = "../voker-ptr" }
voker-cfg = { path = "../voker-cfg" }
voker-utils = { path = "../voker-utils" }
voker-inventory = { path = "../voker-inventory" }

voker-os = { path = "../voker-os", default-features = false }

# reflect serde
serde_core = { version = "1", default-features = false, features = ["alloc"] }
erased-serde = { version = "0.4", default-features = false, features = ["alloc"] }

# optional
glam = { version = "0.32.0", default-features = false, features = ["serde"], optional = true }
uuid = { version = "1.23", default-features = false, features = ["v4","serde"], optional = true }

[dev-dependencies]
ron = "0.12"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition", "--generate-macro-expansion"]
all-features = true
