[package]
name = "voker-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["std"]

std = [
    "voker-os/std",
    "voker-reflect/std",
    "voker-ecs/std",
    "voker-app/std",
]

[dependencies]
voker-state-derive = { path = "derive" }

voker-cfg = { path = "../voker-cfg", default-features = false }
voker-utils = { path = "../voker-utils", default-features = false }
voker-os = { path = "../voker-os", default-features = false }
voker-reflect = { path = "../voker-reflect", default-features = false }
voker-ecs = { path = "../voker-ecs", default-features = false }
voker-app = { path = "../voker-app", default-features = false }

log = { version = "0.4", default-features = false }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition", "--generate-macro-expansion"]
all-features = true
