[package]
name = "voker-task"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = [ "std" ]

web = [
    "std",
    "dep:web-task",
    "voker-os/web",
]

std = [
    "voker-os/std",
    "dep:async-channel",
    "futures-lite/std",
    "async-task/std",
]

# Use async-io's implementation of block_on instead of futures-lite
# Can only be used in std env.
# This is preferred if your application uses async-io.
async_io = [ "dep:async-io" ]

[dependencies]

voker-cfg = { path = "../voker-cfg" }
voker-utils = { path = "../voker-utils" }

voker-os = { path = "../voker-os", default-features = false }

# -------------------- External  --------------------

async-task = { version = "4.7", default-features = false }
atomic-waker = { version = "1", default-features = false }

futures-lite = { version = "2.6", default-features = false, features = [ "alloc"] }

async-channel = { version = "2.5", optional = true }
async-io = { version = "2.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-task = { version = "1", optional = true }

[target.'cfg(not(all(target_has_atomic = "8", target_has_atomic = "16", target_has_atomic = "32", target_has_atomic = "64")))'.dependencies]
async-channel = { version = "2.5", optional = true, features = [ "portable-atomic" ] }
async-task = { version = "4.7", default-features = false, features = [ "portable-atomic" ] }
atomic-waker = { version = "1", default-features = false, features = [ "portable-atomic" ] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition", "--generate-macro-expansion"]
all-features = true
